# AxialEngine

./: CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt
core/graphics/opengl/: CMakeLists.txt  OpenGLGraphicsContext.cpp  OpenGLGraphicsContext.h
core/include/: AxialEngine.h  CMakeLists.txt
core/input/: CMakeLists.txt  Event.h  EventArgs.h  KeyEventArgs.h  Keycodes.h  MouseEventArgs.h  WindowEventArgs.h
core/platform/windows/: CMakeLists.txt  WindowsWindow.cpp  WindowsWindow.h
core/rendering/: CMakeLists.txt  GraphicsContext.h
core/system/: Application.cpp  Application.h  CMakeLists.txt  Window.h
editor/: AxialEditor.cpp  CMakeLists.txt
